--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -203,12 +203,21 @@ code {
 	color: var(--gray-900);
 }
 
-/* Inline code styles */
 code:not(.block) {
 	display: inline;
 	padding: 0.2rem 0.4rem;
 	background-color: var(--gray-200);
 	border-radius: 0.25rem;
+	color: var(--gray-900);
+}
+
+pre {
+	background-color: var(--gray-200);
+	padding: 0.5rem;
+	border-radius: 0.375rem;
+	margin-top: 0.5rem;
+	display: block;
+	font-family: monospace;
 	color: var(--gray-900);
 }
 
@@ -402,6 +411,11 @@ body.bg-gray-900 code {
 }
 
 body.bg-gray-900 code:not(.block) {
+	background-color: var(--gray-800);
+	color: var(--gray-100);
+}
+
+body.bg-gray-900 pre {
 	background-color: var(--gray-800);
 	color: var(--gray-100);
 }
